			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

29-Dec-2002
~~~~~~~~~~~
Show thumbnails in List view. Allow changing the icon size. If the size is
automatic, show thumbnails as Huge and everything else as Small.

28-Dec-2002
~~~~~~~~~~~
Use bold style to indicate recent items (instead of the pink background).

27-Dec-2002
~~~~~~~~~~~
Sort type is shared between Icon and List views. Sort order can be reversed.
Highlight recently changed items with a tasteful pink background.
When the bookmark editor window first opened, no item was selected. If the
user clicked on it to select it, editing mode started instead (reported by
Bernard Jungen).
Removed most of the options section of the manual, since it was just echoing
the information in the tooltips anyway.

26-Dec-2002
~~~~~~~~~~~
Various fixes to new list view (reported by George De Bruin).
Mounting and unmounting auto-resizes the window.

25-Dec-2002
~~~~~~~~~~~
Right-clicking the Size button switches to automatic mode and resizes the
window.

24-Dec-2002
~~~~~~~~~~~
Made 'Automatic' an icon size, rather than a separate option.
Size toolbar button shows a menu, including the new Automatic setting.

23-Dec-2002
~~~~~~~~~~~
Rearranged menus and options for new List View mode.

20-Dec-2002
~~~~~~~~~~~
Removed warning message from --new. It can be useful for a session manager...
Draw iconified windows with a background, so they don't get confused with other
icons (suggested by Joakim Andreasson).
Bugfix: Stupid bug stopped iconified windows from being removed and could
	cause a crash!

17-Dec-2002
~~~~~~~~~~~
The 'Directories always come first' option now only applies to name sorts.
Sort by date and size default order has been reversed.
Always use case-insensitive sort.

16-Dec-2002
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).

12-Dec-2002
~~~~~~~~~~~
Details toolbar button switches to the new (unfinished) details view.
Bugfix: Fix detection of new pango wrapping system (Richard Olsson)
