@@ -8,8 +8,6 @@ when someone sends patches!).
 
 BUGS
 
-Wheel mouse doesn't work in List View.
-
 Can't drag to a selected item (from another window).
 
 File2.html comes before File.html.
@@ -38,8 +36,6 @@ Escape text/uri-list.
 Keep the title up-to-date for iconified windows.
 
 FEATURES FOR 1.3
-
-Hilight recently added/modified files.
 
 Bookmarks:
 - Show selection groups?
