@@ -6,6 +6,7 @@
 ~~~~~~~~~~~
 Show thumbnails in List view. Allow changing the icon size. If the size is
 automatic, show thumbnails as Huge and everything else as Small.
+Scroll wheel now works in List view.
 
 28-Dec-2002
 ~~~~~~~~~~~
